# ru-edu-it-safety-kit

./: .antigravity-styleguide.md  .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml
configs/logging/loki/: docker-compose.yml
configs/openwrt/single_isp_school/: dns_filtering.example  firewall.config.example
configs/pfsense/single_isp_school/: rules.xml.example
configs/routeros/single_isp_school/: export.rsc.example
configs/topologies/: multi_building_college.yml  single_isp_school.yml
docs/: architecture.md  edu-regulations.ru.md  security.ru.md  use-cases.ru.md
policy_templates/: it_admin_checklist.ru.md  it_rules_for_parents.ru.md  it_rules_for_students.ru.md  it_rules_for_teachers.ru.md
src/ru_edu_it_safety_kit/: cli.py
src/ru_edu_it_safety_kit/generators/: __init__.py  leaflet_generator.py  measures_planner.py
src/ru_edu_it_safety_kit/models/: __init__.py  school_profile.py
src/ru_edu_it_safety_kit/validators/: __init__.py  config_validator.py
tests/: test_cli_basic.py  test_leaflet_generator.py  test_measures_planner.py  test_school_profile_validation.py
